--- a/AT-Entrega de Projeto/pom.xml
+++ b/AT-Entrega de Projeto/pom.xml
@@ -51,6 +51,13 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
